[package]
name = "rustfilt"
description = "Demangle Rust symbol names"
homepage = "https://github.com/luser/rustfilt"
repository = "https://github.com/luser/rustfilt"
version = "0.2.2-alpha.1+adfernandes"
authors = ["Ted Mielczarek <ted@mielczarek.org>", "Nicholas Schlabach <Techcable@techcable.ent>"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
rustc-demangle = { version = "0.1.24", features = ["std"] }

[dependencies.clap]
version = "2.34.0"
# Exclude all optional features except wrap_help
default-features = false
features = ["wrap_help"]

[profile.release]
# Reduces binary size by 21%
lto = true
